--- a/Assets/CSS/Components/products.css
+++ b/Assets/CSS/Components/products.css
@@ -47,7 +47,7 @@
     background-color: #F61B40;
     color: white;
     font-size: 12px;
-    padding: px 10px;
+    padding: 7px;
     font-weight: 500;
     border-radius: 0px 5px;
 
