--- a/Assets/CSS/products.css
+++ b/Assets/CSS/products.css
@@ -67,7 +67,7 @@
     left: 0px;
     background-color: #FD6020;
     color: white;
-    padding: 2px 5px;
+    padding: 7px;
     font-weight: 500;
     border-radius: 0px 3px;
     font-size: 12px;
